Add support for client-side deletion

--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -8,3 +8,4 @@
 .react-calendar-heatmap .color-scale-8 { fill: #09c700; }
 .react-calendar-heatmap .color-scale-9 { fill: #00c32c; }
 .react-calendar-heatmap .color-scale-10 { fill: #00bf60; }
+.react-calendar-heatmap .color-empty { fill: #ececec; }
